# back/storage/api-docs/api-docs.json
@@ -8,13 +8,13 @@
         },
         "version": "1.0"
     },
-    "host": "http://fonosoft.local/",
+    "host": "fonosoft.local/",
     "basePath": "",
     "schemes": [
         "http"
     ],
     "paths": {
-        "/api/register": {
+        "/api/auth/signup": {
             "post": {
                 "tags": [
                     "Users"
@@ -22,13 +22,32 @@
                 "summary": "Crear nuevo usuario",
                 "parameters": [
                     {
-                        "name": "body",
-                        "in": "body",
+                        "name": "name",
+                        "in": "formData",
                         "description": "Json format",
                         "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/User"
-                        }
+                        "type": "string"
+                    },
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password_confirmation",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "string"
                     }
                 ],
                 "responses": {
@@ -52,6 +71,122 @@
                     }
                 }
             }
+        },
+        "/api/auth/login": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "registrar a un usuario",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "remember_me",
+                        "in": "formData",
+                        "description": "Json format",
+                        "required": true,
+                        "type": "boolean"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u00c9xito: operaci\u00f3n exitosa"
+                    },
+                    "401": {
+                        "description": "Rechazado: no autenticado"
+                    },
+                    "422": {
+                        "description": "Falta campo obligatorio"
+                    },
+                    "404": {
+                        "description": "No encontrado"
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "cerrar sesi\u00f3n de un usuario",
+                "responses": {
+                    "200": {
+                        "description": "\u00c9xito: operaci\u00f3n exitosa"
+                    },
+                    "401": {
+                        "description": "Rechazado: no autenticado"
+                    },
+                    "422": {
+                        "description": "Falta campo obligatorio"
+                    },
+                    "404": {
+                        "description": "No encontrado"
+                    },
+                    "405": {
+                        "description": "Entrada inv\u00e1lida"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
+        "/api/user": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "devolver el usuario",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Json format",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u00c9xito: operaci\u00f3n exitosa"
+                    },
+                    "401": {
+                        "description": "Rechazado: no autenticado"
+                    },
+                    "422": {
+                        "description": "Falta campo obligatorio"
+                    },
+                    "404": {
+                        "description": "No encontrado"
+                    },
+                    "405": {
+                        "description": "Entrada inv\u00e1lida"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
         }
     },
     "definitions": {
@@ -59,7 +194,8 @@
             "required": [
                 "name",
                 "email",
-                "password"
+                "password",
+                "password_confirmation"
             ],
             "properties": {
                 "name": {
@@ -76,8 +212,20 @@
                     "description": "Una contrase\u00f1a muy segura",
                     "type": "string",
                     "example": "123456"
+                },
+                "password_confirmation": {
+                    "description": "Confirmar contrase\u00f1a",
+                    "type": "string",
+                    "example": "123456"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "LogoutAuthentication": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
